tests/paczka2/big_fuzzy/51613336.err
Error in line 1: A826 S428 44,1
Error in line 7: UYYIN3oi A826 14,8
Error in line 21: YnMpJeYCDp A826 143,8
Error in line 19: q9TCz3YwQP S428 59,1
Error in line 22: YnMpJeYCDp S428 88,1
Error in line 35: bdMA5D A826 43,1
Error in line 40: bdMA5D A581 42,5
Error in line 33: YnMpJeYCDp A581 63,8
Error in line 50: bdMA5D A581 4,6
Error in line 63: q9TCz3YwQP A826 -3,3
Error in line 64: q9TCz3YwQP S428 94,4
Error in line 82: bdMA5D S428 32,7
Error in line 85: A826 S428 91,2
Error in line 103: q9TCz3YwQP A826 86,0
Error in line 111: bdMA5D S428 58,1
Error in line 131: 6okhqrd S428 67,3
Error in line 135: bdMA5D A383 10,7
Error in line 136: bdMA5D A581 37,4
Error in line 140: 6okhqrd A826 43,5
Error in line 148: UYYIN3oi A*26 5*,9
Error in line 126: UYYIN3oi S428 49,1
Error in line 151: bdMA5D A581 23,7
Error in line 150: YnMpJeYCDp S428 86,5
Error in line 110: A826 A581 485,0
Error in line 158: A826 A383 20,8
Error in line 149: UYYIN3oi A826 139,0
Error in line 162: UYYIN3oi S428 47,9
Error in line 175: A826 A826 67,7
Error in line 168: UYYIN3oi A581 234,2
Error in line 177: YnMpJeYCDp A581 22,8
Error in line 181: YnMpJeYCDp A383 77,2
Error in line 194: UYYIN3oi S428 3,7
Error in line 201: 6okhqrd A581 -2,2
Error in line 189: YnMpJeYCDp S428 66,6
Error in line 206: YnMpJeYCDp A383 25,4
Error in line 199: q9TCz3YwQP A383 367,2
Error in line 208: q9TCz3YwQP S428 27,0
Error in line 214: UYYIN3oi A383 40,1
Error in line 218: UYYIN3oi A826 96,7
Error in line 212: A826 A383 70,4
Error in line 223: A826 A581 75,2
Error in line 217: q9TCz3YwQP A383 12,1
Error in line 236: bdMA5D A826 13
Error in line 225: UYYIN3oi A383 0,9
Error in line 213: 6okhqrd A581 13,7
Error in line 239: bdMA5D A826 1,24
Error in line 233: bdMA5D S428 97,1
Error in line 241: bdMA5D A826 28,9
Error in line 240: 6uaC S428 20,5
Error in line 237: UYYIN3oi A581 411,8
